<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ifading.markmind.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_toolbar_height">

        <Button
            android:id="@+id/button"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:text="@string/switch_to_md"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_below="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/parentLayout">


        <EditText

            android:id="@+id/textView"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="22dp"
            android:background="#33000000"
            />


        <LinearLayout
            android:id="@+id/markDown_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <TextView
                android:text="@string/edit_page_short_cut_title"
                android:id="@+id/edit_page_short_cut_title"
                style="@style/edit_page_short_cut_tv_style" />

            <!--<TextView
                android:text="@string/edit_page_short_cut_center"
                android:id="@+id/edit_page_short_cut_center"
                style="@style/edit_page_short_cut_tv_style" />-->

            <TextView
                android:text="@string/edit_page_short_cut_list"
                android:id="@+id/edit_page_short_cut_list"
                style="@style/edit_page_short_cut_tv_style" />

            <TextView
                android:text="@string/edit_page_short_cut_bold"
                android:id="@+id/edit_page_short_cut_bold"
                style="@style/edit_page_short_cut_tv_style" />

            <TextView

                android:text="@string/edit_page_short_cut_quote"
                android:id="@+id/edit_page_short_cut_quote"
                style="@style/edit_page_short_cut_tv_style" />

        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_below="@+id/main_toolbar"
        android:layout_margin="15dp"
        android:visibility="invisible"
        android:id="@+id/markdown_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>